k8s/book/minna-no-k8s/4/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - route:
      - destination:
          host: app
          port:
            number: 5000
          subsets: v1
        weight: 90
      - destination:
          host: app
          port:
            number: 5000
          subsets: v2
        weight: 10
